[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rad-trading-bot"
version = "3.2.0"
description = "Production-grade KuCoin Futures Trading Bot with AI and Machine Learning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RAD Trading Bot Contributors"}
]
keywords = ["trading", "cryptocurrency", "futures", "kucoin", "bot", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "ccxt>=4.5.12",
    "python-dotenv>=1.1.0",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "ta>=0.11.0",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
    "python-dateutil>=2.9.0",
    "joblib>=1.4.2",
    "xgboost>=2.1.3",
    "lightgbm>=4.6.0",
    "catboost>=1.2.7",
    "tensorflow>=2.19.0",
    "optuna>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "flask>=3.1.0",
    "plotly>=5.24.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.0",
    "pylint>=3.3.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/loureed691/RAD"
Repository = "https://github.com/loureed691/RAD"
Issues = "https://github.com/loureed691/RAD/issues"

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | logs
  | models
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "ta.*",
    "websocket.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [".", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0902",  # Too many instance attributes
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "R0915",  # Too many statements
    "W0212",  # Access to protected member
    "W0703",  # Catching too general exception
]

[tool.isort]
profile = "black"
line_length = 120
